UsedClass loaders for loading resources